RESOLVED FIXED270237
[WGSL] shader,validation,parse,semicolon:* is failing
https://bugs.webkit.org/show_bug.cgi?id=270237
Summary [WGSL] shader,validation,parse,semicolon:* is failing
Tadeu Zagallo
Reported 2024-02-28 10:34:35 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-28 10:34:51 PST
Tadeu Zagallo
Comment 2 2024-02-28 11:46:48 PST
EWS
Comment 3 2024-02-29 05:09:23 PST
Committed 275488@main (edb02386f41a): <https://commits.webkit.org/275488@main> Reviewed commits have been landed. Closing PR #25244 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.