[WGSL] shader,validation,parse,semicolon:* is failing https://bugs.webkit.org/show_bug.cgi?id=270237 rdar://123773267

Reviewed by Mike Wyrzykowski.

We were missing a semicolon after diagnostic declarations, after that all semicolon
tests pass.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/parse/semicolon-expected.txt:
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseShader):

Canonical link: https://commits.webkit.org/275488@main